--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "astrotomic/laravel-translatable": "*",
         "darkaonline/l5-swagger": "*",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "*",
